<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RecyclerPlayground</string>
    <string name="title_section1">Vertical List</string>
    <string name="title_section2">Horizontal List</string>
    <string name="title_section3">Static Two-Way List</string>
    <string name="title_section4">Fixed Two-Way List</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <string name="action_empty">Empty</string>
    <string name="action_small">Small Grid</string>
    <string name="action_medium">Medium Grid</string>
    <string name="action_large">Large Grid</string>
    <string name="action_scroll_zero">Scroll Home</string>
    <string name="action_smooth_zero">Smooth Scroll Home</string>
    <string name="action_add">Add</string>
    <string name="action_remove">Remove</string>

</resources>
