<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_empty"
        android:title="@string/action_empty"
        android:orderInCategory="90"
        android:showAsAction="never" />
    <item android:id="@+id/action_small"
        android:title="@string/action_small"
        android:orderInCategory="91"
        android:showAsAction="never" />
    <item android:id="@+id/action_medium"
        android:title="@string/action_medium"
        android:orderInCategory="92"
        android:showAsAction="never" />
    <item android:id="@+id/action_large"
        android:title="@string/action_large"
        android:orderInCategory="93"
        android:showAsAction="never" />

    <item android:id="@+id/action_scroll_zero"
        android:title="@string/action_scroll_zero"
        android:orderInCategory="100"
        android:showAsAction="never" />
    <item android:id="@+id/action_smooth_zero"
        android:title="@string/action_smooth_zero"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>